# tuttifrutti-heterogeneity-loopfunctions

loop-functions/: CMakeLists.txt
loop-functions/heterogeneity/: CMakeLists.txt  HetAggLoopFunc.cpp  HetAggLoopFunc.h  HeteroAggLoopFunc.cpp  HeteroAggLoopFunc.h
loop-functions/moca/: CMakeLists.txt  TuttiAgLoopFunc copy.cpp  TuttiAgLoopFunc.cpp  TuttiAgLoopFunc.h  TuttiFrLoopFunc.cpp  TuttiFrLoopFunc.h  TuttiStLoopFunc.cpp  TuttiStLoopFunc.h  aggregation.argos
scenarios/heterogeneity/: aggregation.argos  argos.sh  build_scenario.py  chain_robots.argos  execution.py  prueba1.argos
scenarios/tuttifrutti/: evoAggregation.argos  evoForaging.argos  evoStop.argos  tuttiAggregation.argos  tuttiForaging.argos  tuttiStop.argos
scenarios/tuttifrutti/control-software/aggregation/evocolor/: champ_0  champ_1  champ_2  champ_3  champ_4  champ_5  champ_6  champ_7  champ_8  champ_9
scenarios/tuttifrutti/control-software/aggregation/tuttifrutti/: fsm.txt
scenarios/tuttifrutti/control-software/foraging/evocolor/: champ_0  champ_1  champ_2  champ_3  champ_4  champ_5  champ_6  champ_7  champ_8  champ_9
scenarios/tuttifrutti/control-software/foraging/tuttifrutti/: fsm.txt
scenarios/tuttifrutti/control-software/stop/evocolor/: champ_0  champ_1  champ_2  champ_3  champ_4  champ_5  champ_6  champ_7  champ_8  champ_9
scenarios/tuttifrutti/control-software/stop/tuttifrutti/: fsm.txt
